# zaqstuff

./: .gitignore  README.md
draw/: CMakeLists.txt  main.cpp
draw/shaders/: shader.frag
tui_clock/: CMakeLists.txt  main.c  renderer.c  renderer.h  timeDeal.c  timeDeal.h
v_list/: v_list.html
